# voice-ai-pipeline

./: .gitignore  LICENSE  Makefile  README.md  VOICE_COPILOT_README.md  VOICE_INTEGRATION_GUIDE.md  demo_auto_note.py  demo_voice_copilot.py  pyproject.toml  pytest.ini  requirements_asr.txt  requirements_interface.txt  requirements_overlay.txt  requirements_test.txt  requirements_tts.txt  voice_copilot_overlay.py  voice_copilot_widget.html
browser-extension/: content.js  manifest.json  popup.html  popup.js
docker/: asr.Dockerfile  interface.Dockerfile  tts.Dockerfile
k8s/: asr-deployment.yaml  asr-service.yaml  interface-deployment.yaml  tts-deployment.yaml  voice-ai-deployment.yaml
k8s/old/: asr-deployment.yaml  kaniko-configmap.yaml  kaniko-job.yaml
scripts/: test-k8s.sh
tts_ai_pipeline/: asr.py  auto_note.py  interface.py  local_notes.py  microphone.py  optimize_asr.py  optimize_tts.py  summarizer.py  tts.py
tts_ai_pipeline/tests/: test_pipeline.py
voice_ai_pipeline/: __init__.py  asr.py  auto_note.py  interface.py  local_notes.py  mcp_client.py  microphone.py  onenote_manager.py  tts.py
voice_ai_pipeline/tests/: __init__.py  test_k8s.py  test_mcp.py  test_pipeline.py
vscode-extension/: package-lock.json  package.json  tsconfig.json
vscode-extension/src/: extension.ts
