[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tts-ai-pipeline"
version = "0.1.0"
description = "A TTS AI pipeline with ASR and TTS using local models"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "faster-whisper==1.2.0",
    "torch==2.6.0",
    "torchaudio==2.6.0",
    "torchvision==0.21.0",
    "fastapi==0.116.1",
    "uvicorn[standard]==0.35.0",
    "python-multipart==0.0.20",
    "TTS==0.14.3",
    "pydantic==2.11.9",
    "gradio==5.45.0",
    "requests==2.32.5",
    "scipy==1.15.3",
    "numpy==1.23.5",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
optimize-asr = "tts_ai_pipeline.optimize_asr:main"
optimize-tts = "tts_ai_pipeline.optimize_tts:main"
test-pipeline = "tts_ai_pipeline.tests.test_pipeline:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["tts_ai_pipeline*"]

[tool.setuptools.package-data]
tts_ai_pipeline = ["*"]
