[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "voice_ai_pipeline"
version = "0.1.0"
description = "A TTS AI pipeline with ASR and TTS using local models"
authors = [
    {name = "Philip Mai", email = "philip.e.mai@gmail.com"},
]
dependencies = [
    "faster-whisper==1.2.0",
    "torch==2.6.0",
    "torchaudio==2.6.0",
    "torchvision==0.21.0",
    "fastapi==0.116.1",
    "uvicorn[standard]==0.35.0",
    "python-multipart==0.0.20",
    "TTS==0.14.3",
    "pydantic==2.11.9",
    "gradio==5.45.0",
    "requests==2.32.5",
    "scipy==1.15.3",
    "numpy==1.23.5",
    "msgraph-sdk==1.0.0",
    "msgraph-core==1.0.0",
    "azure-identity==1.15.0",
    "transformers==4.40.0",
    "sentencepiece==0.2.0",
    "pyaudio>=0.2.11",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
optimize-asr = "voice_ai_pipeline.optimize_asr:main"
optimize-tts = "voice_ai_pipeline.optimize_tts:main"
test-pipeline = "voice_ai_pipeline.tests.test_pipeline:main"
microphone = "voice_ai_pipeline.microphone:main"
auto-note = "voice_ai_pipeline.auto_note:main"

[tool.hatch.build.targets.wheel]
packages = ["voice_ai_pipeline"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "voice_ai_pipeline/_version.py"
